Se empezo a hacer el chat de noticias

--- a/gymHouse/posts/templates/alumnos_noticias-noticiacompleta.html
+++ b/gymHouse/posts/templates/alumnos_noticias-noticiacompleta.html
@@ -1,13 +1,13 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="assets/styles_menu.css">
-    <link rel="stylesheet" type="text/css" href="assets/styles_menu-celu.css">
-    <link rel="stylesheet" type="text/css" href="assets/styles_alumnos-noticias-noticiacompleta.css">
-    <script src="assets/js/sectionNewsComplete.js"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles_menu.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles_menu-celu.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles_alumnos-noticias-noticiacompleta.css' %}">
     <title>Gym House: noticias</title>
 </head>
 <body>
@@ -85,11 +85,7 @@
     </div>
     <div class="navigation--space" id="navigation--space"></div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="https://kit.fontawesome.com/1169c95eac.js" crossorigin="anonymous"></script>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script> document.getElementById("eprofile").style.display='none'; </script>
+    
 
     <section class="news_complete--section">
         <div class="pseudo-padding"> 
@@ -97,12 +93,10 @@
         </div>
         <div class="news_complete">
             <div class="img-fill"></div>
-            <img src="assets/img/ensalada2.jpg" class="news_img" alt="">
+            <img src="{{object.foto.url}}" class="news_img" alt="{{object.titulo}}">
             
-            <h3>Titulo</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ipsam velit sed! Modi animi sed molestiae suscipit maiores quis accusantium tenetur. Iure quasi eaque eveniet voluptates! Molestias voluptate perferendis omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, culpa id vel soluta eaque necessitatibus mollitia sit architecto eligendi nam officiis ipsam temporibus sapiente numquam consectetur delectus totam! Quis, vel? Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ipsam velit sed! Modi animi sed molestiae suscipit maiores quis accusantium tenetur. Iure quasi eaque eveniet voluptates! Molestias voluptate perferendis omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, culpa id vel soluta eaque necessitatibus mollitia sit architecto eligendi nam officiis ipsam temporibus sapiente numquam consectetur delectus totam! Quis, vel? am! Quis, vel? Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ipsam velit sed! Modi animi sed molestiae suscipit maiores quis accusantium tenetur. Iure quasi eaque eveniet voluptates! Molestias voluptate perferendis omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, culpa id vel solut 
-            am! Quis, vel? Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ipsam velit sed! Modi animi sed molestiae suscipit maiores quis accusantium tenetur. Iure quasi eaque eveniet voluptates! Molestias voluptate perferendis omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, culpa id vel solut
-            </p>
+            <h3>{{object.titulo}}</h3>
+            <p>{{object.texto}}</p>
 
             <div class="coments--conteiner">
 
@@ -152,6 +146,12 @@
     </section>
 
     <script src="https://kit.fontawesome.com/1169c95eac.js" crossorigin="anonymous"></script>
+    <script src="{% static 'js/sectionNewsComplete.js' %}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/1169c95eac.js" crossorigin="anonymous"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script> document.getElementById("eprofile").style.display='none'; </script>
 
 </body>
 </html>
