--- a/gymHouse/static/css/styles_alumnos-noticias-noticiacompleta.css
+++ b/gymHouse/static/css/styles_alumnos-noticias-noticiacompleta.css
@@ -94,6 +94,7 @@ body{
     background: #F1FFEB;
     box-shadow: 0px 0px 15px 4px rgba(0, 0, 0, 0.2);
     border-radius: 75px 75px 32px 32px;
+    margin-bottom: 3%;
 }
 
 .pseudo-padding{
@@ -140,7 +141,7 @@ body{
 
 .news_complete--section p{
     font-family: "raleway regular";
-    font-size: max(1.6vw,min(1.5rem));
+    font-size: max(1.3vw,min(1.5rem));
     text-align: justify;
     line-height: 1.5em;
     width: 100%;
@@ -161,6 +162,8 @@ body{
     justify-content: center;
     align-items: flex-start;
     margin-top: 5%;
+    position: relative;
+    /* margin-bottom: 5%; */
 }
 
 .coments--conteiner > .coments{
@@ -171,6 +174,53 @@ body{
     border-radius: 32px;
     padding: 1.5%;
     overflow: auto;
+    position: relative;
+}
+
+.coments--conteiner > .coments::-webkit-scrollbar
+{
+    width: .6rem;
+}
+.coments--conteiner > .coments::-webkit-scrollbar-thumb
+{
+    background-color: rgba(88, 86, 86, 0.426);
+    width: 100%;
+    border-radius: 20px;
+    border-color: transparent;
+}
+
+.input_comment
+{
+    position: absolute;
+    width: 100%;
+    height: 5rem;
+    background-color: #3C403B;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0rem;
+    border-radius: 18px 18px 32px 32px;
+    overflow: hidden;
+}
+
+.input_comment > input
+{
+    width: 90%;
+    height: 70%;
+    border-radius: 1rem;
+    border-color: transparent;
+    font-family: "raleway regular";
+    font-size: max(1.1vw,min(1.5rem));
+    padding-left: 1rem;
+    text-align: justify;
+    outline:none;
+}
+.input_comment > input::placeholder
+{
+    font-family: "raleway regular";
+    font-size: max(1vw,min(1.5rem));
+    text-align: justify;
 }
 /*---------------------------------------------------------*/
 
@@ -190,7 +240,7 @@ body{
 
 .coments-overflow{
     height: fit-content;
-    
+    padding-bottom: 1.5%;
 }
 
 /*Burbuja de comentario*/
