--- a/gymHouse/templates/index_alumnos.html
+++ b/gymHouse/templates/index_alumnos.html
@@ -8,6 +8,11 @@
         <link rel="stylesheet" href="{% static 'css/styles_menu.css' %}" />
         <link rel="stylesheet" href="{% static 'css/styles_menu-celu.css' %}">
         <link rel="stylesheet" href="{% static 'css/styles_alumnos-landing.css' %}" />
+
+        <link rel="stylesheet" type="text/css" href="{% static 'css/styles_navcel.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/stylesPerfil.css' %}">
+        <script src="{% static 'js/sectionProfile.js' %}"></script>
+
         <title>GymHouse: Alumnos</title>
     
     
@@ -23,9 +28,9 @@
                         </a> 
                     </li> 
                     <li>
-                        <a href="alumnos_perfil.html">
-                            <img src="{% static 'images/user.png' %}">
-                            <p>Perfil</p>
+                        <a href="#" class="show-profile" id="show-profile"> 
+                            <img src="{% static 'images/user.png' %}"> 
+                            <p>Perfil</p> 
                         </a>
                     </li> 
                     <li> 
@@ -49,7 +54,170 @@
                 </ul>
             </div>
         </nav>
-
+        <section class="section-profile" id="section-profile">
+            <div id="perfil_bg--blur" class="perfil_bg--blur">
+                <div class="perfil_bg--gradient" id="perfil_bg--gradient">
+                    <div class="perfil_bg" id="perfil_bg">
+                        <!-- Perfil minimizado........................................ -->
+                        <div class="navbar--fill" id="navbar--fill"></div> 
+                        <div id="profile" class="profile">
+                            {% if user.foto_de_perfil == None %}
+                                <div class="profile_data--radiuspic" id="profile_data--radiuspic">
+                                    <img src="{% static 'images/avatar/9.png' %}" class="profile_data--pic" id="profile_data--pic">
+                                </div>
+                            {% else %}
+                                <div class="profile_data--radiuspic" id="profile_data--radiuspic">
+                                    <img src="{{user.foto_de_perfil}}" class="profile_data--pic" id="profile_data--pic">
+                                </div>
+                            {% endif %}
+                            
+                            <div class="profile_data--name" id="profile_data--name">
+                                <h1>L4R7</h1>
+                                {% comment %} <figure></figure> {% endcomment %}
+                                <h3>{{user.nombre}} {{user.apellido}}</h3>
+                                {% if  user.edad != None%}
+                                    <p>{{user.edad}} años</p>
+                                {% endif %}
+                                {% comment %} <p>{{user.edad}}</p> {% endcomment %}
+                            </div>
+                            <div class="profile_data--description" id="profile_data--description">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio autem deleniti aliquid exercitationem iure et sit consectetur similique eaque molestias, voluptatibus modi magni a eum quas dicta fugit ratione mollitia.</p>
+                            </div>
+                            <div class="profile_data--numbers" id="profile_data--numbers">
+                                <ol>
+                                    <li>
+                                        <h5>3624036724</h5>
+                                        <p>CONTACTO</p>
+                                    </li>
+                                    <li>
+                                        <h5>180</h5>
+                                        <p>ALTURA</p>
+                                    </li>
+                                    <li>
+                                        <h5>90</h5>
+                                        <p>PESO</li>
+                                    </li>
+                                </ol>
+                            </div>
+                            <button id="profile_data--button" class="profile_data--button">
+                                <p>Editar Perfil</p> 
+                            </button>
+                        </div>
+                        <!-- Fin perfil minimizado........................................ -->
+                        
+                        <!-- Fin perfil edicion (clases referenciadas con una E)........................................ -->
+                        <div id="eprofile" class="eprofile">
+                            <div class="eprofile_data--radiuspic" id="eprofile_data--radiuspic">
+                                <img src="assets/img/avatar/9.png" id="eprofile_data--pic">
+                                <button id="eprofile_data--button-image" class="eprofile_data--button-image">
+                                    <p>Cambiar imagen</p> 
+                                </button>
+                            </div>
+                            
+                            <div class="eprofile_data--description" id="eprofile_data--description">
+                                <h3>Biografía</h3>
+                                <textarea placeholder="Cuentanos un poco acerta de ti!"></textarea>
+                            </div>
+                            <div class="eprofile_data--nickname">
+                                <div class="input-group">
+                                    <input required="" type="text" name="text" autocomplete="off" class="input">
+                                    <label class="user-label">Apodo</label>
+                                </div>
+                            </div>
+                            <div class="eprofile_data--name" id="eprofile_data--name">
+                                <div class="input-group">
+                                    <input required="" type="text" name="text" autocomplete="off" onkeypress="return (event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122) || (event.charCode == 32)" class="input">
+                                    <label class="user-label">Nombre(s)</label>
+                                </div>
+                                <div class="input-group">
+                                    <input required="" type="text" name="text" autocomplete="off" class="input" onkeypress="return (event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122) || (event.charCode == 32)">
+                                    <label class="user-label">Apellido(s)</label>
+                                </div>
+                                <div class="input-group" id="input-group--tel">
+                                    <input required="" type="tel" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" maxlength="10" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)" autocomplete="off" class="input">
+                                    <label class="user-label">Telefono</label>
+                                </div>
+                                <div class="input-group" id="input-group--email">
+                                    <input required="" type="email" name="text" autocomplete="off" class="input">
+                                    <label class="user-label">Correo electronico</label>
+                                </div>
+                            </div>
+    
+                            <div class="eprofile_data--gender" id="eprofile_data--gender">
+                                <div class="eprofile_data--genderdiv">
+                                    <label for="man">
+                                        <p>Hombre</p>
+                                        <figure id="gender_man"> <img src="assets/img/men.png" alt=""></figure>
+                                    </label>
+                                    <input type="radio" name="gender" id="man">
+                                    <label for="woman">
+                                        <p>Mujer</p>
+                                        <figure id="gender_woman"><img src="assets/img/woman.png" alt=""></figure>
+                                    </label>
+                                    <input type="radio" name="gender" id="woman">
+                                    <label for="other">
+                                        <p>Otro</p>
+                                        <figure id="gender_other"><img src="assets/img/other.png" alt=""></figure>
+                                    </label>
+                                    <input type="radio" name="gender" id="other">  
+                                </div>     
+                            </div>
+    
+                            <div class="eprofile_data--numbers" id="eprofile_data--numbers">
+                                <div class="input-group">
+                                    <input required="" type="tel" min="0" name="text" autocomplete="off" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)" class="input" maxlength="3">
+                                    <label class="user-label">Altura</label>
+                                </div>
+                                <div class="input-group">
+                                    <input required="" type="tel" min="0" name="text" autocomplete="off" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)" class="input" maxlength="3">
+                                    <label class="user-label">Peso</label>
+                                </div>
+                                <div class="input-group">
+                                    <input required="" type="tel" min="0" name="text" autocomplete="off" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)" class="input" maxlength="3"> 
+                                    <label class="user-label">Edad</label>
+                                </div>
+                            </div>
+                            <div class="eprofile_data--password" id="eprofile_data--password">
+                                <div class="input-group">
+                                    <input required="" type="password" name="text" autocomplete="off" class="input" id="actualPassword">
+                                    <label class="user-label">
+                                        Contraseña actual
+                                    </label>
+                                    <i class="fa-solid fa-eye-slash" id="solid-eye-slash-actual"></i>
+                                    <i class="fa-solid fa-eye" id="solid-eye-actual"></i>
+                                </div>
+                                <div class="input-group">
+                                    <input required="" type="password" name="text" autocomplete="off" class="input" id="newPassword">
+                                    <label class="user-label">
+                                        Nueva contraseña
+                                    </label>
+                                    <i class="fa-solid fa-eye-slash" id="solid-eye-slash-new"></i>
+                                    <i class="fa-solid fa-eye" id="solid-eye-new"></i>
+                                </div>
+                                <div class="input-group">
+                                    <input required="" type="password" name="text" autocomplete="off" class="input" id="confirmPassword">
+                                    <label class="user-label">
+                                        Confirmar contraseña
+                                    </label>
+                                    <i class="fa-solid fa-eye-slash" id="solid-eye-slash-confirm"></i>
+                                    <i class="fa-solid fa-eye" id="solid-eye-confirm"></i>
+                                </div>
+                            </div>
+                            <button id="eprofile_data--button-update" class="eprofile_data--button-update">
+                                <p>actualizar contraseña</p> 
+                            </button>
+                            <button id="eprofile_data--button-save" class="eprofile_data--button-save">
+                                <p>Guardar</p> 
+                            </button>
+                        </div>    
+                        <!-- Fin perfil edicion........................................ -->
+                    </div>
+                </div>
+            </div>
+    
+            <div class="aestethical-margin"></div>
+    
+        </section>
         <div class="navigation" id="navigation">
             
             <ul>
@@ -219,4 +387,5 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script> document.getElementById("eprofile").style.display='none'; </script>
+
 </html>
