seccion de turnos casi terminada

--- a/gymHouse/posts/templates/alumnos_noticias-noticiacompleta.html
+++ b/gymHouse/posts/templates/alumnos_noticias-noticiacompleta.html
@@ -151,6 +151,7 @@
 
     <script src="https://kit.fontawesome.com/1169c95eac.js" crossorigin="anonymous"></script>
     <script src="{% static 'js/sectionNewsComplete.js' %}"></script>
+    <script src="{% static 'js/comments_ajax.js' %}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/1169c95eac.js" crossorigin="anonymous"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
