--- a/gymHouse/static/css/styles_alumnos-turnos.css
+++ b/gymHouse/static/css/styles_alumnos-turnos.css
@@ -143,10 +143,37 @@ body{
     display: grid;
     gap: 1rem;
     grid-template-columns: 5rem 2fr 1fr;
-    grid-template-rows: 100%;
+    grid-template-rows: 50% 50%;
     justify-items: center;
     align-items: start;
     padding: 3rem 2rem 2rem 2rem;
+    position: relative;
+    overflow: hidden;
+}
+.window_turno_alumnos
+{
+    grid-column: 3/4;
+    grid-row: 2/3;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 32px;
+    min-height: 33rem;
+    position: absolute;
+    bottom: -100%;
+    /* right: 0; */
+    transition: all 1s ease;
+    justify-self: center;
+}
+
+.window_turno_alumnos.active
+{
+    bottom: 9%;
+}
+
+.shifts_info > .alumnos
+{
+    display: none;
 }
 
 /*shift table-title*/
@@ -167,6 +194,7 @@ body{
     padding: 1rem;
     border-bottom: 10px solid transparent;
     margin-top: 5vh;
+    grid-row: 1/3;
 }
 
 .shifts_table h1{
@@ -306,6 +334,11 @@ body{
     display:flex;
     justify-content: center;
 }
+/* .shifts_info--pupils.element_clicked
+{   
+    transition: all .3s ease;
+    background-color: #484e61;
+} */
 
 .shifts_info--pupils p{
     text-decoration: none;
