--- a/gymHouse/personas/templates/edit_perfil.html
+++ b/gymHouse/personas/templates/edit_perfil.html
@@ -12,6 +12,8 @@
 </head>
 <body>
     <form method="POST" id="eprofile" class="eprofile">
+        {% csrf_token %}
+        
         <div class="eprofile_data--radiuspic" id="eprofile_data--radiuspic">
             <img src="{{user.foto_de_perfil}}" id="eprofile_data--pic">
             <label for="eprofile_data--button-image" class="eprofile_data--button-image-label">
@@ -34,19 +36,19 @@
         </div>
         <div class="eprofile_data--name" id="eprofile_data--name">
             <div class="input-group">
-                <input required="" name="" type="text" name="text" autocomplete="off" onkeypress="return (event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122) || (event.charCode == 32)" class="input">
+                <input required="" name="nombre" value="{% if user.nombre != None %}{{user.nombre}}{% endif %}"  type="text"  autocomplete="off" onkeypress="return (event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122) || (event.charCode == 32)" class="input">
                 <label class="user-label">Nombre(s)</label>
             </div>
             <div class="input-group">
-                <input required="" type="text" name="text" autocomplete="off" class="input" onkeypress="return (event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122) || (event.charCode == 32)">
+                <input required="" value="{% if user.apellido != None %}{{user.apellido}}{% endif %}"type="text" name="apellido" autocomplete="off" class="input" onkeypress="return (event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122) || (event.charCode == 32)">
                 <label class="user-label">Apellido(s)</label>
             </div>
             <div class="input-group" id="input-group--tel">
-                <input required="" type="tel" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" maxlength="10" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)" autocomplete="off" class="input">
+                <input required="" name="telefono" value="{% if user.telefono != None %}{{user.telefono}}{% endif %}"type="tel" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" maxlength="10" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)" autocomplete="off" class="input">
                 <label class="user-label">Telefono</label>
             </div>
             <div class="input-group" id="input-group--email">
-                <input required="" type="email" name="text" autocomplete="off" class="input">
+                <input required="" value="{% if user.email != None %}{{user.email}}{% endif %}" type="email" name="email" autocomplete="off" class="input">
                 <label class="user-label">Correo electronico</label>
             </div>
         </div>
@@ -57,64 +59,39 @@
                     <p>Hombre</p>
                     <figure id="gender_man"> <img src="assets/img/men.png" alt=""></figure>
                 </label>
-                <input type="radio" name="gender" id="man">
+                <input type="radio" name="genero" id="man" value="hombre" {% if user.genero == "hombre" %}checked{% endif %}>
                 <label for="woman">
                     <p>Mujer</p>
                     <figure id="gender_woman"><img src="assets/img/woman.png" alt=""></figure>
                 </label>
-                <input type="radio" name="gender" id="woman">
+                <input type="radio" name="genero" id="woman" value="mujer" {% if user.genero == "mujer" %}checked{% endif %}>
                 <label for="other">
                     <p>Otro</p>
                     <figure id="gender_other"><img src="assets/img/other.png" alt=""></figure>
                 </label>
-                <input type="radio" name="gender" id="other">  
+                <input type="radio" name="genero" id="other" value="otro" {% if user.genero == "otro" %}checked{% endif %}>  
             </div>     
         </div>
 
         <div class="eprofile_data--numbers" id="eprofile_data--numbers">
             <div class="input-group">
-                <input required="" type="tel" min="0" name="text" autocomplete="off" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)" class="input" maxlength="3">
+                <input required="" value="{% if user.altura != None %}{{user.altura}}{% endif %}" type="tel" min="0" name="altura" autocomplete="off" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)" class="input" maxlength="3">
                 <label class="user-label">Altura</label>
             </div>
             <div class="input-group">
-                <input required="" type="tel" min="0" name="text" autocomplete="off" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)" class="input" maxlength="3">
+                <input required="" value="{% if user.peso != None %}{{user.peso}}{% endif %}" type="tel" min="0" name="peso" autocomplete="off" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)" class="input" maxlength="3">
                 <label class="user-label">Peso</label>
             </div>
             <div class="input-group">
-                <input required="" type="tel" min="0" name="text" autocomplete="off" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)" class="input" maxlength="3"> 
+                <input required="" value="{% if user.edad != None %}{{user.edad}}{% endif %}" type="tel" min="0" name="edad" autocomplete="off" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)" class="input" maxlength="3"> 
                 <label class="user-label">Edad</label>
             </div>
         </div>
-        <div class="eprofile_data--password" id="eprofile_data--password">
-            <div class="input-group">
-                <input required="" type="password" name="text" autocomplete="off" class="input" id="actualPassword">
-                <label class="user-label">
-                    Contraseña actual
-                </label>
-                <i class="fa-solid fa-eye-slash" id="solid-eye-slash-actual"></i>
-                <i class="fa-solid fa-eye" id="solid-eye-actual"></i>
-            </div>
-            <div class="input-group">
-                <input required="" type="password" name="text" autocomplete="off" class="input" id="newPassword">
-                <label class="user-label">
-                    Nueva contraseña
-                </label>
-                <i class="fa-solid fa-eye-slash" id="solid-eye-slash-new"></i>
-                <i class="fa-solid fa-eye" id="solid-eye-new"></i>
-            </div>
-            {% comment %} <div class="input-group">
-                <input required="" type="password" name="text" autocomplete="off" class="input" id="confirmPassword">
-                <label class="user-label">
-                    Confirmar contraseña
-                </label>
-                <i class="fa-solid fa-eye-slash" id="solid-eye-slash-confirm"></i>
-                <i class="fa-solid fa-eye" id="solid-eye-confirm"></i>
-            </div> {% endcomment %}
-        </div>
-        {% comment %} <button id="eprofile_data--button-update" class="eprofile_data--button-update">
+        
+        <a href ="{% url 'personas:change_pass' %}" id="eprofile_data--button-update" class="eprofile_data--button-update">
             <p>actualizar contraseña</p> 
-        </button> {% endcomment %}
-        <button id="eprofile_data--button-save" class="eprofile_data--button-save">
+        </a> 
+        <button id="eprofile_data--button-save" class="eprofile_data--button-save" type="submit">
             <p>Guardar</p> 
         </button>
     </form>
