formulario de cambio de contraseña

--- a/gymHouse/personas/templates/change_password.html
+++ b/gymHouse/personas/templates/change_password.html
@@ -1,17 +1,27 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/styles_changePassword.css' %}">
     <title>Document</title>
 </head>
 <body>
     <form action="" method="POST">
         {% csrf_token %}
-        {{form}}
+        <label for="id_old_password">Contraseña actual</label>
+        <input type="password" name="old_password" required="" id="id_old_password">
+
+        <label for="id_new_password1">Nueva Contraseña</label>
+        <input type="password" name="new_password1" required="" id="id_new_password1">
+
+        <label for="id_new_password2">Confirme la contraseña</label>
+        <input type="password" name="new_password2" required="" id="id_new_password2">
+
         <input type="submit" value="Actualizar">
-        {{error}}
+
     </form>
 </body>
 </html>
